--- a/Exp4 portfolio/src/app/contact-me/contact-me.component.html
+++ b/Exp4 portfolio/src/app/contact-me/contact-me.component.html
@@ -45,19 +45,19 @@
         <h1>Contact Me</h1>
         <div class="contact-info">
             <div class="contact-item">
-                <span class="contact-label">Name:</span> K Bharani Kumar Reddy
+                <span class="contact-label">Name:</span> Name
             </div>
             <div class="contact-item">
                 <span class="contact-label">Phone Number:</span> 8985964705
             </div>
             <div class="contact-item">
-                <span class="contact-label">Email Id:</span> <a href="mailto:Bharanikudala@gmail.com" class="contact-link">Bharanikudala@gmail.com</a>
+                <span class="contact-label">Email Id:</span> <a href="@gmail.com" class="contact-link"></a>
             </div>
             <div class="contact-item">
-                <span class="contact-label">GitHub:</span> <a href="https://github.com/bharani-kudala" target="_blank" class="contact-link">bharani-kudala</a>
+                <span class="contact-label">GitHub:</span> <a href="https://github.com" target="_blank" class="contact-link">Github</a>
             </div>
             <div class="contact-item">
-                <span class="contact-label">LinkedIn:</span> <a href="https://www.linkedin.com/in/kudala-bharani" target="_blank" class="contact-link">kudala-bharani</a>
+                <span class="contact-label">LinkedIn:</span> <a href="https://www.linkedin.com/" target="_blank" class="contact-link">Linkedin</a>
             </div>
         </div>
     </div>
